--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 *.ko
 *.obj
 *.elf
-*.json
 
 # Linker output
 *.ilk
@@ -51,3 +50,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+*.json
+*.vscode
+
